--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,13 +14,79 @@
     margin: 10px;
 }
 
-.profile-pic {
+.box {
+    position: relative;
+    border-radius: 50%;
+    width: 400px;
+    height: 400px;
+    background: #642B73;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #C6426E, #642B73);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #C6426E, #642B73);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    box-shadow: #0000009a 2px 5px 5px;
+}
+
+.content {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: grid;
+    align-items: center;
+    color: #fff;
+    padding: 20px;
+    font-family: consolas;
+    text-align: center;
+}
+
+.content a {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 20px;
+    border: 1px solid #fff;
+    text-decoration: none;
+    color: #fff;
+    transition: 0.5s;
+    border-radius: 30px;
+    box-shadow: #0000009a 2px 5px 5px;
+}
+
+.content a:hover {
+    color: #fff;
+    background: #41295a;
+    text-decoration: none; 
+    transform: scale(1.2);
+}
+
+.box img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    transition: 1s;
+    -webkit-clip-path: circle(71.8% at 50% 51%);
+    clip-path: circle(71.8% at 50% 51%);
+}
+
+.box:hover img {
+    -webkit-clip-path: circle(0.0% at 50% 0);
+    clip-path: circle(0.0% at 50% 0);
+}
+
+/* .profile-pic {
     border-radius: 50%;
     height: 200px;
     width: 200px;
     align-self: center;
     box-shadow: #0000009a 2px 5px 5px;
-}
+} */
 
 .course-link {
     color: #ecfdf9;
@@ -42,17 +108,27 @@ body {
 }
 
 .jumbotron {
+    margin-top: 30px;
+    box-shadow: 0 20px 20px #0000009a;
+    opacity: 0.6;
+    text-align: center;
     background: #41295a;
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, rgb(85, 7, 124), #d83f87);
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, rgb(85, 7, 124), #d83f87);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
-    box-shadow: 0 20px 20px #0000009a ;
-    opacity: 0.6 ;
-    text-align: center ;
-    margin-top: 10%;
+.jumbotron:hover .site-header-content {
+    opacity: 100%;
+
+}
+
+.footer {
+    box-shadow: 0 20px 20px #0000009a;
+    text-align: center;
+    margin-top: 20px;
 }
 
 /* Link styling starts here */
@@ -64,7 +140,7 @@ body {
     background: #f1f1f1 ;
     border-radius: 30% ;
     box-shadow: 0 5px 15px -5px #00000070 ;
-    color: #3498db ;
+    color: #82589F;
     overflow: hidden ;
     position: relative ;
 }
@@ -85,7 +161,7 @@ body {
     position: absolute ;
     width: 120% ;
     height: 120% ;
-    background: #3498db ;
+    background: #D6A2E8;
     transform: rotate(45deg);
     left: -110% ;
     top: 90% ; 
