minor styling added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,7 +161,7 @@ body {
     position: absolute ;
     width: 120% ;
     height: 120% ;
-    background: #D6A2E8;
+    background: #FC427B;
     transform: rotate(45deg);
     left: -110% ;
     top: 90% ; 
