--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,6 +118,27 @@ body, html {
     }
 }
 
+@media only screen and (min-width: 375px) and (max-height: 667px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
+    .box,
+    .box img {
+        width: 210.5px;
+        height: 210.5px;
+        margin: 10% auto;
+    }
+
+    .box img {
+        margin: 0;
+        padding: 0;
+    }
+
+    .content h3 {
+        font-size: 16px;
+    }
+
+    .content a {
+        padding: 5px 10px;
+}
+
 @media screen and (max-width: 1280px) {
     .data {
         transform: scale(0.8);
