--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,44 +101,48 @@ body, html {
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
+    .green {
+        position: fixed;
+        width: 110%;
+        height: 25%;
+        left: 3%;
+        top: 40%;
+        transform: scale(2.2);
+    }
+    .blue {
+        position: fixed;
+        width: 110%;
+        height: 25%;
+    }
     .box, .box img {
-        width: 210.5px;
-        height: 210.5px;
-        margin: 10% auto; 
+        top: 10%;
+        left: 16%;
+        width: 150px;
+        height: 150px;
+        margin-top: 15%; 
+        margin-left: 7%;
+        padding: 0;
     }
     .box img {
-        margin: 0;
+        top: 10%;
+        left: 15%;
+        margin: -10% 0 0 -15%;
         padding: 0;
     }
     .content h3 {
-        font-size: 16px;
+        font-size: 12px;
     }
     .content a {
-        padding: 5px 10px;
-    }
-}
-
-@media only screen and (min-width: 375px) and (max-height: 667px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
-    .box, .box img {
-        width: 210.5px;
-        height: 210.5px;
-        margin: 10% auto;
-    }
-
-    .box img {
+        padding: 2px 2px;
         margin: 0;
-        padding: 0;
     }
-
-    .content h3 {
-        font-size: 16px;
+    .data {
+        transform: scale(0.5);
     }
-
-    .content a {
-        padding: 5px 10px;
 }
 
-@media screen and (max-width: 1280px) {
+
+/* @media screen and (max-width: 1280px) {
     .data {
         transform: scale(0.8);
     }
@@ -153,4 +157,4 @@ body, html {
     .box {
         transform: scale(0.8);
     }
-}
+} */
