--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,7 @@ body, html {
     text-align: center;
     height: 200px;
     width: 200px;
+    box-shadow: #0000009a 0px 50px 30px;
     background: linear-gradient(to bottom, #ee5a24, #ffc312);
 }
 
@@ -35,4 +36,9 @@ body, html {
     border-radius: 50%;
     padding: 5px;
     height: 100%;
+}
+
+.img-container, .profile-pic:hover {
+    transform: rotate(360deg);
+    transition: 1.5s;
 }
