--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,12 +60,43 @@ body, html {
 .link-container {
     box-shadow: #0000009a 0px 20px 30px;
     position: relative;
+    display: inline-block;
     text-align: center;
     background: #8c7ae6;
     border-radius: 40px;
     opacity: 0.8;
     width: 150px;
     height: 50px;
+}
+
+.link-container .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #2C3A47;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.link-container .dropdown-content a {
+    padding: 10px 8px;
+    text-decoration: none;
+    border-radius: 40px;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    
+    background-color: #ddd;
+}
+
+.dropdown-content a:hover i {
+    transition: 0.8s;
+    transform: scale(1.5) rotate(360deg);
+}
+
+.link-container:hover .dropdown-content {
+    display: block;
 }
 
 #box2 ul li .link-container a {
@@ -78,6 +109,7 @@ body, html {
     transform: scale(1.5);
     transition: 0.8s;
     background: #e056fd;
+
     opacity: 1;
 }
 
