--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -6,5 +6,28 @@ body, html {
 }
 
 body {
+    background: #8c7ae6;
+    text-align: center;
+}
+
+#box1 {
+    width: 60%;
+    height: 100%;
+    object-position: center;
+    margin-left: 20%;
+    text-align: center;
+}
+
+.about {
+    margin: 15% auto;
+    padding-bottom: 30%;
     background: #ffc312;
+    border-radius: 8px;
+
+}
+
+.bg {
+    position: absolute;
+    webkit-clip-path: polygon(50% 50%, 100% 20%, 100% 0, 0 0, 0 20%);
+    clip-path: polygon(50% 50%, 100% 20%, 100% 0, 0 0, 0 20%);
 }
