--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,122 +1,236 @@
-body, html {
-    height: 100%;
-    width: 100%;
-    background: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    object-fit: cover;
+/* ====================<    BASE STYLING     >==================== */
+
+*,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    justify-content: center;
+}
+
+body {
+    background-image: url("assets/images/bg.png");
+    font-family: 'Livvic',
+        sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url("../images/web-bg-3.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: whitesmoke;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
 }
 
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 420px) {
-    body {
-       background-image: url("../images/mob-bg.png");
-    }
-    #box2 {
-        padding-top: 5%;
-        margin-bottom: 2%;
-    }
-    #box2 ul li button {
-        margin-bottom: 20%;
-    }
+a {
+    text-decoration: none;
 }
 
-.container {
-    text-align: center;
+.pipe {
+    color: blueviolet;
 }
 
-.img-container {
+.yellow {
+    color: #F09A48;
+}
+
+/* ====================<    LANDING AREA    >==================== */
+
+.bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    /* background-image: url(hand-macro-sky-90762.jpg); */
+    background-image: radial-gradient(#F09A48 5%, #EB9772 20%, #CD6F8A 45%, #593F5F 85%, #3E365B 100%);
+    background-repeat: no-repeat;
+    background-position: center;
+    /* box-shadow: #0000009a 0px 50px 30px; */
+    background-size: cover;
+    clip-path: polygon(0 0, 100% 0, 96% 11%, 75% 16%, 67% 39%, 50% 50%, 40% 33%, 12% 20%);
+}
+
+.imgContainer {
     border-radius: 50%;
     position: relative;
-    margin: 10% auto;
-    text-align: center;
+    top: 35vh;
+    margin: auto;
     height: 200px;
     width: 200px;
     box-shadow: #0000009a 0px 50px 30px;
-    background: linear-gradient(to bottom, #ee5a24, #ffc312);
 }
 
-.profile-pic {
+.imgContainer img {
     border-radius: 50%;
-    padding: 5px;
     height: 100%;
 }
 
-.img-container, .profile-pic:hover {
+.imgContainer,
+img:hover {
     transform: rotate(360deg);
     transition: 1.5s;
 }
 
-#box2 {
+nav {
     position: relative;
+    width: 50%;
+    top: 40%;
     text-align: center;
+    justify-content: center;
     margin: auto;
 }
 
-#box2 ul li {
-    list-style-type: none; 
-    text-align: center;
-    display: inline-block;
-    padding-right: 40px;
-    float: none;
+nav .nav-list {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
 }
 
-#box2 ul li button {
-    box-shadow: #0000009a 0px 20px 30px;
-    text-decoration: none;
-    text-shadow: #0000009a 2px 2px 5px;
+nav .nav-link {
+    float: right;
+    flex-direction: column;
+    color: #f1f1f1;
+    font-size: 1.3rem;
+    line-height: .5rem;
+    padding-bottom: 15px;
+    font-weight: 450;
+}
+
+nav .nav-link:hover {
+    color: blueviolet;
+    transform: scale(1.1);
+    /* border-radius: 5px; */
+    transition: .4s;
+}
+
+.info {
+    position: absolute;
+    width: 100%;
+    top: 72%;
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+}
+
+.info::after {
+    content: '';
     position: relative;
-    display: inline-block;
-    border-radius: 50px;
-    text-align: center;
-    background: #8c7ae6;
-    color:#f5f6fa;
-    border: none;
-    opacity: 0.8;
-    width: 150px;
-    height: 50px;
-}
-
-#box2 ul li button:hover {
-    transform: scale(1.5);
-    transition: 0.8s;
-    background: #e056fd;
-    opacity: 1;
-}
-
-.fa-long-arrow-alt-right:hover {
-    transform: rotate(-360deg);
-    transition: 0.8s;
-}
-
-#box2 ul li .sm-menu {
-    position: absolute;
-    border-radius: 8px;
-    background: #487eb0;
-    display: none;
-}
-
-#box2 ul li .sm-menu i {
-    color: #f5f6fa;
-    padding: 20px;
-    font-size: 20px;
-    transition: 0.4s;
-}
-
-#box2 ul li .sm-menu:hover::before {
-    content: "";
-    width: 10px;
-    height: 10px;
-    background: #487eb0;
-    position: absolute;
-    top: -5px;
-    left: 50%;
-    transform: translateX(-50%) rotate(45deg);
-}
-
-#box2 ul li .sm-menu:hover::after {
+    margin-top: 20px;
+    /* opacity: .3; */
+    border-radius: 5px;
     display: block;
+    width: 20vw;
+    height: 3px;
+    background: linear-gradient(90deg, #CD6F8A 10%, #ED8F38 90%);
+    left: 40%;
+    top: 85%;
 }
+
+.info h2 {
+    font-size: 1.5rem;
+    font-weight: 200;
+    line-height: 2rem;
+    text-shadow: 0 5px 10px #0000009a;
+}
+
+.info h2::before {
+    font-family: "Font Awesome 5 Free";
+    content: '\f10d';
+    display: inline-block;
+    position: relative;
+    font-size: 2rem;
+    font-weight: 400;
+    opacity: .5;
+}
+
+.info h2::after {
+    font-family: "Font Awesome 5 Free";
+    content: '\f10e';
+    display: inline-block;
+    position: relative;
+    font-size: 2rem;
+    font-weight: 400;
+    opacity: .5;
+}
+
+.skillset {
+    top: 62%;
+    margin: auto;
+    text-align: center;
+    position: relative;
+    justify-content: center;
+}
+
+.skillset .pipe {
+    padding: 10px;
+}
+
+/* .moveUp {
+    padding: 0;
+    margin: 0;
+    position: relative;
+    width: 100vw;
+    top: 61%;
+}
+
+.moveUp .upIcon {
+    margin-left: 48%;
+} */
+
+/* ====================<    ABOUT ME AREA    >==================== */
+
+.aboutMe {
+    position: relative;
+    top: 66%;
+    width: 100%;
+    justify-content: center;
+    text-align: center;
+}
+
+.aboutMe .heading {
+    position: relative;
+    background: url("assets/images/AboutBg.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 676px;
+}
+
+.aboutMe .heading h1 {
+    padding-top: 36%;
+    font-weight: 100;
+    font-size: 5rem;
+    text-shadow: #0000009a 10px 5px 10px;
+}
+
+.aboutMe .heading h1::after {
+    content: '';
+    display: block;
+    margin: auto;
+    padding: 0;
+    width: 500px;
+    height: 20px;
+    background: linear-gradient(90deg, #8A2BE2 10%, #B181DD 90%);
+
+}
+
+.aboutMe .content {
+    background: url("assets/images/section-1.svg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+
+/* clip-path: polygon(100% 0, 50% 50%, 100% 100%, 0 100%, 0 0); */
+
+/* clip-path: polygon(0 0, 100% 0, 96% 11%, 75% 16%, 67% 39%, 50% 50%, 40% 33%, 12% 20%); */
