--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-image: url("assets/images/bg.png");
+    background-image: url("../images/bg.png");
     font-family: 'Livvic',
         sans-serif;
     margin: 0;
@@ -194,7 +194,7 @@ nav .nav-link:hover {
 
 .aboutMe .heading {
     position: relative;
-    background: url("assets/images/AboutBg.svg");
+    background: url("../images/AboutBg.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -220,7 +220,7 @@ nav .nav-link:hover {
 }
 
 .aboutMe .content {
-    background: url("assets/images/section-1.svg");
+    background: url("../images/section-1.svg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
