--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,6 +158,14 @@ nav .nav-link:hover {
     opacity: .5;
 }
 
+.arrow {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 90%;
+    left: 5%;
+}
+
 .skillset {
     top: 62%;
     margin: auto;
