--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,7 @@
 
 body {
     background-image: url("../images/bg.png");
+    font-size: 20px;
     font-family: 'Livvic',
         sans-serif;
     margin: 0;
@@ -44,11 +45,9 @@ a {
     height: 100%;
     margin: 0;
     padding: 0;
-    /* background-image: url(hand-macro-sky-90762.jpg); */
     background-image: radial-gradient(#F09A48 5%, #EB9772 20%, #CD6F8A 45%, #593F5F 85%, #3E365B 100%);
     background-repeat: no-repeat;
     background-position: center;
-    /* box-shadow: #0000009a 0px 50px 30px; */
     background-size: cover;
     clip-path: polygon(0 0, 100% 0, 96% 11%, 75% 16%, 67% 39%, 50% 50%, 40% 33%, 12% 20%);
 }
@@ -56,7 +55,7 @@ a {
 .imgContainer {
     border-radius: 50%;
     position: relative;
-    top: 35vh;
+    top: 30%;
     margin: auto;
     height: 200px;
     width: 200px;
@@ -95,16 +94,14 @@ nav .nav-link {
     float: right;
     flex-direction: column;
     color: #f1f1f1;
-    font-size: 1.3rem;
+    font-size: 1em;
     line-height: .5rem;
     padding-bottom: 15px;
-    font-weight: 450;
 }
 
 nav .nav-link:hover {
     color: blueviolet;
     transform: scale(1.1);
-    /* border-radius: 5px; */
     transition: .4s;
 }
 
@@ -120,11 +117,10 @@ nav .nav-link:hover {
 .info::after {
     content: '';
     position: relative;
-    margin-top: 20px;
-    /* opacity: .3; */
+    margin-top: 15px;
     border-radius: 5px;
     display: block;
-    width: 20vw;
+    width: 20%;
     height: 3px;
     background: linear-gradient(90deg, #CD6F8A 10%, #ED8F38 90%);
     left: 40%;
@@ -133,12 +129,12 @@ nav .nav-link:hover {
 
 .info h2 {
     font-size: 1.5rem;
-    font-weight: 200;
-    line-height: 2rem;
+    font-weight: 100;
+    line-height: 2em;
     text-shadow: 0 5px 10px #0000009a;
 }
 
-.info h2::before {
+/* .info h2::before {
     font-family: "Font Awesome 5 Free";
     content: '\f10d';
     display: inline-block;
@@ -156,39 +152,119 @@ nav .nav-link:hover {
     font-size: 2rem;
     font-weight: 900;
     opacity: .5;
-}
+} */
 
 .arrow {
     position: absolute;
     width: 40px;
     height: 40px;
-    top: 90%;
+    top: 93%;
     left: 5%;
 }
 
 .skillset {
-    top: 62%;
+    top: 65%;
     margin: auto;
     text-align: center;
     position: relative;
     justify-content: center;
+    font-weight: 100;
 }
 
 .skillset .pipe {
     padding: 10px;
 }
 
-/* .moveUp {
-    padding: 0;
-    margin: 0;
-    position: relative;
-    width: 100vw;
-    top: 61%;
-}
+@media all and (max-width: 375px) {
+    
+    .bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-image: linear-gradient(#F09A48 5%, #EB9772 20%, #CD6F8A 45%, #593F5F 85%, #3E365B 100%);
+        background-image: linear-gradient(to bottom, #CD6F8A 5%, #F09A48 90%);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        clip-path: polygon(0 0, 100% 0, 100% 50%, 75% 45%, 70% 35%, 38% 30%, 35% 16%, 8% 10%);
+    }
 
-.moveUp .upIcon {
-    margin-left: 48%;
-} */
+    .imgContainer {
+        border-radius: 50%;
+        position: relative;
+        top: 20%;
+        margin: auto;
+        height: 150px;
+        width: 150px;
+        box-shadow: #0000009a 0px 20px 10px;
+    }
+
+    .imgContainer img {
+        border-radius: 50%;
+        height: 100%;
+    }
+
+    .imgContainer,
+    img:hover {
+        transform: rotate(360deg);
+        transition: 1.5s;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .info {
+        position: absolute;
+        width: 100%;
+        top: 50%;
+        text-align: center;
+        justify-content: center;
+        margin: auto;
+    }
+
+    .info::after {
+        content: '';
+        position: relative;
+        margin-top: 15px;
+        border-radius: 5px;
+        display: block;
+        width: 35%;
+        height: 3px;
+        background: linear-gradient(90deg, #CD6F8A 10%, #ED8F38 90%);
+        top: 85%;
+        left: 34%;
+    }
+
+    .info h2 {
+        font-size: 1rem;
+        line-height: 1.5rem;
+        text-shadow: 0 2px 7px #0000009a;
+    }
+
+    .arrow {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        top: 92%;
+        left: 45%;
+    }
+
+    .skillset {
+        top: 65%;
+        margin: auto;
+        text-align: center;
+        position: relative;
+        justify-content: center;
+        font-size: .6rem;
+    }
+
+    .skillset .pipe {
+        padding: 2px;
+    }
+}
 
 /* ====================<    ABOUT ME AREA    >==================== */
 
@@ -248,6 +324,66 @@ nav .nav-link:hover {
     font-size: 1.5rem;
     line-height: 3rem;
     margin-left: 45%;
+}
+
+@media all and (max-width: 375px) {
+    .aboutMe {
+        position: relative;
+        top: 75%;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .aboutMe .heading {
+        position: relative;
+        background: url("../svgs/mob-AboutBg.svg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 600px;
+    }
+
+    .aboutMe .heading h1 {
+        padding-top: 158%;
+        font-size: 1.3rem;
+        text-shadow: #0000009a 10px 5px 10px;
+    }
+
+    .aboutMe .heading h1::after {
+        content: '';
+        display: block;
+        margin: auto;
+        padding: 0;
+        width: 120px;
+        height: 8px;
+        border-radius: 5px;
+        background: linear-gradient(90deg, #8A2BE2 10%, #B181DD 90%);
+
+    }
+
+    .aboutMe .content {
+        position: relative;
+        background: url("../svgs/mob-AboutContent.svg");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+    }
+
+    .aboutMe .content .bio {
+        position: absolute;
+        padding: 180px 20px 20px 0;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        font-size: 1.1rem;
+        line-height: 1.5rem;
+        margin: auto;
+    }
 }
 
 
