--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -1,15 +1,18 @@
 .card {
-    background: #ffffff;
+    background: linear-gradient(0deg, #060510, #2f2e3f, #060510);
+    color: #fff;
+    border-radius: 4px;
     align-self: space-around;
     position: relative;
-    height: 40%;
+    height: 50%;
     width: 100%;
     margin: 3% 2.5%;
     display: flex;
 }
 
 .card:hover {
-    box-shadow: #000000d0 3px 5px 20px;
+    transform: translateY(-10px);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
     transition: .8s;
 }
 
@@ -17,29 +20,33 @@
     /* border: 2px solid red; */
     position: relative;
     justify-content: center;
+    border-radius: 4px;
     width: 50%;
     height: 100%;
 
 }
 
-.image .info {
+.image .data {
     position: absolute;
     text-align: center;
+    margin: auto;
     top: 20%;
-    left: 20%;
-
 }
 
-.image .info h1 {
+.image .data h1 {
     text-shadow: #000000d0 10px 5px 10px;
     font-size: 2em;
     margin-bottom: 20px;
 }
 
-.image .info a img {
-    color: #ffffff;
-    width: 30%;
+.image .data a img {
+    display: none;
+    width: 20%;
     margin: 8%;
+}
+
+.card:hover .image .data a img {
+    display: inline-block;
 }
 
 .img {
@@ -54,11 +61,11 @@
 
 .blur {
     position: absolute;
-    top: 3%;
-    left: 3%;
-    width: 94%;
-    height: 94%;
-    background: #ffffff40;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+    background: #00000040;
 
 }
 
@@ -67,7 +74,7 @@
     width: 50%;
     height: 100%;
     padding: 0.8em;
-    color: #1f1f1f;
+    color: #fff;
     font-size: 0.7rem;
     line-height: 1rem;
 }
@@ -76,9 +83,10 @@
     padding-bottom: 20px;
 }
 
-.content .tech ul .html::after {
+.card:hover .content .tech ul .html::after {
     content: '';
     position: absolute;
+    transition: 0.8s;
     width: 50px;
     height: 5px;
     background: #B1EF91;
@@ -87,7 +95,7 @@
     margin-top: 6px;
 }
 
-.content .tech ul .css::after {
+.card:hover .content .tech ul .css::after {
     content: '';
     position: absolute;
     width: 80px;
@@ -98,7 +106,7 @@
     margin-top: 6px;
 }
 
-.content .tech ul .js::after {
+.card:hover .content .tech ul .js::after {
     content: '';
     position: absolute;
     width: 70px;
@@ -109,7 +117,7 @@
     margin-top: 6px;
 }
 
-.content .tech ul .node::after {
+.card:hover .content .tech ul .node::after {
     content: '';
     position: absolute;
     width: 60px;
@@ -120,7 +128,7 @@
     margin-top: 6px;
 }
 
-.content .tech ul .mongo::after {
+.card:hover .content .tech ul .mongo::after {
     content: '';
     position: absolute;
     width: 40px;
@@ -131,7 +139,7 @@
     margin-top: 6px;
 }
 
-.content .tech ul .react::after {
+.card:hover .content .tech ul .react::after {
     content: '';
     position: absolute;
     width: 80px;
@@ -142,7 +150,7 @@
     margin-top: 6px;
 }
 
-.content .tech ul .express::after {
+.card:hover .content .tech ul .express::after {
     content: '';
     position: absolute;
     width: 50px;
@@ -161,7 +169,7 @@
     padding-top: 1.2em
 }
 
-.content .about h3::after {
+.card:hover .content .about h3::after {
     content: '';
     position: absolute;
     width: 100px;
