--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import "mobile.css";
 @import "card.css";
+@import "skills.css";
 
 /* ==============================<    BASE STYLING     >============================== */
 
@@ -40,6 +41,10 @@ a {
     color: #F09A48;
 }
 
+.disabled {
+    color: rgb(158, 158, 158);
+}
+
 .drawing-1 {
     position: relative;
     background-image: url("../svgs/Drawing-1.svg");
@@ -74,10 +79,10 @@ a {
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    -moz-background-size: auto auto;
-    -webkit-background-size: auto auto;
-    -o-background-size: auto auto;
-    background-size: auto auto;
+    -moz-background-size: auto 100%;
+    -webkit-background-size: auto 100%;
+    -o-background-size: auto 100%;
+    background-size: auto 100%;
     top: 20%;
     width: 100%;
     height: 630px;
@@ -124,8 +129,7 @@ a {
     height: 100%;
 }
 
-.imgContainer,
-img:hover {
+.imgContainer img:hover {
     transform: rotate(360deg);
     transition: 1.5s;
 }
@@ -287,7 +291,10 @@ nav .nav-link:hover {
     top: 20%;
     width: 100%;
     height: 100%;
-    background: #3E365B;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background: url("../svgs/skillsBg.svg");
 }
 
 /* ==============================<    PROJECTS AREA    >============================== */
@@ -321,36 +328,77 @@ nav .nav-link:hover {
     flex-direction: row;
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 80%;
     background: #3E365B;
 }
 
-/* ==============================<    CARDS    >============================== */
-
-
-
-/* ==============================<    CARDS    >============================== */
+/* ==============================<    FOOTER    >============================== */
 
 footer {
     position: relative; 
+    justify-content: center;
+    text-align: center;
     width: 100%;
     height: 50%;
     background: #3E365B;
-    display: flex;
 }
 
-footer .joke {
-    align-self: flex-end;
-    width: 40%;
-    height: 40%;
-    text-align: center;
-    padding: 25px;
-    /* top: 25%; */
-    border-radius: 10px;
-    background: #F09A48;
-    position: relative;
-    /* box-shadow: #000000d0 2px 8px 25px; */
+footer .links {
+    display: flex;
+    height: 10%;
+    background: linear-gradient(90deg, #CD6F8A 10%, #ED8F38 90%);
+    box-shadow: #0000009a 0 8px 35px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-weight: 600;
+    font-size: 1.2em;
 }
+
+footer .links a:hover {
+    transition: 0.5s;
+    color: blueviolet;
+}
+
+footer main {
+    position: relative;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    /* float: left; */
+}
+
+footer main .left {
+    position: relative;
+    margin-top: 2%;
+    width: 60%;
+    height: 100%;
+}
+
+footer main .right {
+    position: relative;
+    width: 40%;
+    height: 100%;
+    background: #B181DD;
+    border-radius: 1000px 0 0 1000px;
+}
+
+footer main .right img:hover {
+    transform: scale(1.2);
+    transition: 0.7s;
+}
+
+footer main .left .joke {
+    position: relative;
+    padding: 20px;
+    text-align: center;
+    margin-top: 3%;
+    width: 90%;
+    height: 100%;
+    background: #CD6F8A;
+    border-radius: 0 1000px 1000px 0;
+}
+
+
 
 
 
